--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb+srv://Admin:QuantumLearn949342@cluster0.t1pszh7.mongodb.net/?appName=Cluster0
 GOOGLE_CLIENT_ID=321612544837-pq9g77ngg86g2burmcnceqg6ato3uogo.apps.googleusercontent.com
+EMAIL_USER=saraswatrishabh82@gmail.com
+EMAIL_PASS=txth frdd ntjj rbac
