--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.6",
+    "nodemailer": "^8.0.1",
     "nodemon": "^3.1.11",
     "quantum-circuit": "^0.9.247"
   }
