--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.13.4",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "framer-motion": "^12.34.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.4",
@@ -18,7 +20,8 @@
     "react-easy-crop": "^5.5.6",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.13.0",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "three": "^0.183.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
