--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.13.4",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "framer-motion": "^12.34.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.4",
